# leetcodebuddy

./: .env.example  .gitignore  LICENSE  README.md  discord_bot.py  main.py  pyproject.toml  requirements.txt
src/bot/: leetcode_bot.py
src/commands/: user_commands.py
src/config/: settings.py
src/database/: database_manager.py
src/events/: event_handlers.py
src/services/: group_services.py  keep_alive.py  leetcode_services.py
src/tasks/: scheduled_tasks.py
src/ui/: modals.py  views.py
